package protocol;

message TransactStart {
	required TransactParam MyTNP = 1;
	required TransactParam ParenTNP = 2;
	optional bytes CustomData = 3;
}

message TransactCtrlCmd {
	required int64 TId = 1;
	required int32 Cmd = 2;
}

message TransactResult {
	required int64 MyTId = 1;
	required int64 ChildTId = 2;
	required int32 RetCode = 3;
	optional bytes CustomData = 4;
}

message TransactParam {
	required int64 TransNodeID = 1;
	required int32 TransType = 2;
	required int32 OwnerType = 3;
	required int32 OwnerID = 4;
	required int32 SkeletonID = 5;
	required int32 LevelNo = 6;
	required int32 AreaID = 7;
	required int64 TimeOut = 8;
	required int32 TransCommitType = 9;
}